argocd/k8s-monitor/02-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-monitor
  namespace: k8s-monitor
  labels:
    app: k8s-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-monitor
  template:
    metadata:
      labels:
        app: k8s-monitor
    spec:
      serviceAccountName: k8s-monitor
      volumes:
        - name: sa-token
          secret:
            secretName: k8s-monitor-sa-token
      containers:
        - name: app
          image: vinnioliver66/k8s-monitor:v1.0.39
          imagePullPolicy: Always
          volumeMounts:
            - name: sa-token
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              readOnly: true
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /api/config
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/config
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
