argocd/k8s-monitor/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-monitor
  namespace: k8s-monitor
spec:
  selector:
    app: k8s-monitor
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
